# unspoken

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Caddyfile  Dockerfile  README.md  alembic.ini  api.Dockerfile  build.sh  deploy.sh  diarization_notebook.ipynb  docker-compose.dev.yaml  docker-compose.yml  frontend.Dockerfile  new_segments.json  old_segments.json  pyproject.toml  whisper.ipynb  worker.Dockerfile
alembic/: env.py
alembic/versions/: 2024_07_07_2209-a74c1f16bbc1_initial_migration.py  2024_07_13_2020-842029c9356f_update_basic_model.py  2024_09_18_0028-c435852e591c_migrate_tasks_to_processing_status.py  2025_01_26_2009-989ae533399c_initial.py  a74c1f16bbc1_initial_migration.py
docs/: docs.html  openapi.json
frontend/unspoken/: .env  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  tsconfig.json  vite.config.ts
frontend/unspoken/src/: App.tsx  api.ts  app.tsx  common.js  error-page.jsx  globals.css  index.css  main.jsx  main.tsx
frontend/unspoken/src/components/: drop-zone.jsx  header.tsx  logo_svg.tsx  message.jsx  status.jsx
frontend/unspoken/src/pages/: error.tsx  labeling.tsx  task.tsx  upload.tsx
frontend/unspoken/src/routes/: root.jsx  task.jsx
frontend/unspoken/src/types/: api.ts
resources/: models_lock.json
resources/diarization/: diar_msdd_telephonic.nemo  general.yaml  meeting.yaml  telephonic.yaml  vad_multilingual_marblenet.nemo
resources/models/nemo/: help.txt
resources/postgres/: postgresql.conf
unspoken/: app.py  exceptions.py  settings.py  trascriptor.py
unspoken/api/: __init__.py  labeling.py  messages.py  speakers.py  tasks.py  tasks_v2.py  transcribe.py  upload.py
unspoken/core/: device.py  loader.py  singleton.py
unspoken/enitites/: diarization.py  speach_to_text.py  transcription.py
unspoken/enitites/api/: labeling.py  messages.py  speakers.py  tasks.py  upload.py
unspoken/enitites/enums/: labeling_segment_status.py  labeling_task_status.py  mime_types.py  ml_models.py  nemo_type.py  task_status.py
unspoken/services/: audio_service.py  labeling_service.py  task_queue.py
unspoken/services/annotation/: annotate_transcription.py
unspoken/services/audio/: converter.py
unspoken/services/db/: __init__.py  api.py  base.py  models.py
unspoken/services/ml/: base_diarizer.py  diarizer.py  nemo_diarizer.py  pyanote_diarizer.py  speechbarin_diarizer.py  transcriber.py
unspoken/services/ml/pipelines/: transcribe_flow.py
unspoken/services/queue/: broker.py  tasks.py  worker.py
unspoken/services/queue/pipelines/: transcribe_flow.py
unspoken/services/queue/tasks/: __init__.py  complete_transcribing_task.py  convert_audio_task.py  diarize_audio_task.py  transcribe_audio_task.py  transcribe_task.py
