[tool.poetry]
name = "unspoken"
version = "0.1.0"
description = ""
authors = ["nuclearthinking"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
faster-whisper = "^0.10.0"
sqlalchemy = "^2.0.23"
fastapi = "^0.104.1"
gunicorn = "^21.2.0"
python-multipart = "^0.0.6"
python-magic = "^0.4.27"
pydub = "^0.25.1"
uvicorn = "^0.24.0.post1"
psycopg = "^3.1.9"
psycopg2-binary = "^2.9.6"
celery = "^5.3.5"
nemo-toolkit = { version = "^1.21", extras = ["asr"] }
youtokentome = {git="https://github.com/LahiLuk/YouTokenToMe.git"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.5"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.isort]
length_sort = true
multi_line_output = 3
line_length = 120