[tool.poetry]
name = "unspoken"
version = "0.1.0"
description = ""
authors = ["nuclearthinking"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.23"
psycopg = "^3.1.9"
psycopg2-binary = "^2.9.6"
celery = "^5.3.5"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.3"
pydub = "^0.25.1"
prefect = "^2.19.7"
alembic = "^1.13.2"


[tool.poetry.group.worker.dependencies]
numpy = "<2.0.0"
pyannote-audio = "^3.3.1"
faster-whisper = "^1.0.2"

[tool.poetry.group.api.dependencies]
fastapi = "0.111.0"
gunicorn = "22.0.0"
uvicorn = "^0.30.1"
python-multipart = "^0.0.9"
python-magic = "^0.4.27"
apscheduler = "^3.10.4"
gradio = "^4.38.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.2"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.isort]
length_sort = true
multi_line_output = 3
line_length = 120
extend_skip = ["alembic/versions"]