[project]
name = "unspoken"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.13.2",
    "faster-whisper>=1.0.3",
    "numpy<2.0.0",
    "psycopg>=3.2.1",
    "psycopg2-binary>=2.9.9",
    "pyannote-audio==3.3.1",
    "pydantic>=2.9.1",
    "pydantic-settings>=2.5.2",
    "pydub>=0.25.1",
    "sqlalchemy>=2.0.34",
    "fastapi>=0.114.2",
    "gunicorn>=23.0.0",
    "uvicorn>=0.30.6",
    "python-multipart>=0.0.9",
    "python-magic>=0.4.27",
    "librosa>=0.10.2.post1",
    "noisereduce>=3.0.2",
    "speechbrain>=1.0.1",
]

[tool.uv]
dev-dependencies = [
    "isort>=5.13.2",
    "ruff>=0.6.5",
]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.isort]
length_sort = true
multi_line_output = 3
line_length = 120
extend_skip = ["alembic/versions"]
